--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
   </head>
   <body>
-    <div class="" style="border: 2px solid black; text-align: center">
+    <div class="" style="text-align: center">
         <ul id="listmenu">
           <li><a href="#">Home</a></li>
           <li><a href="#">Gallery</a></li>
@@ -37,8 +37,8 @@
           <li><a href="#">Contact</a></li>
         </ul>
     </div>
-      <div class="" style="border: 2px solid black;">
-        <div class="" style="border: 2px solid black; display: inline-block; width: 34%; padding-left: 180px;">
+      <div class=""">
+        <div class="" style="display: inline-block; width: 34%; padding-left: 180px;">
           <button type="button" name="button" style="font-weight: 500; font-size: 18px; color: white; background-color: green; border-radius: 35px; border-bottom-left-radius: 0px; padding: 3px 8px 3px 8px;">About Me</button>
           <h1 style="margin-top: 2px; margin-bottom: 2px;">Maqsood Jatoi</h1>
           <p style="font-size: 18px; font-weight: 600;">Welcome to my official portfolio website short info of me, My name is maqsood ahmed
@@ -49,29 +49,29 @@
               <li><a href="#">Add: Sadiqabad colony link society road,N.shah</a></li>
             </ul>
         </div>
-        <div class="" style="border: 2px solid black; display: inline-block; width: 33%; padding-left: 180px;">
+        <div class="" style="display: inline-block; width: 33%; padding-left: 180px;">
             <img src="mypic.jpg" alt="" style="width: 220px; border-radius: 50%;">
         </div>
       </div>
-    <div class="" style="border: 2px solid black;">
-      <div class="" style="border: 2px solid black; display: inline-block; width: 34%; padding-left: 180px;">
+    <div class="">
+      <div class="" style="display: inline-block; width: 34%; padding-left: 180px;">
         <img src="coronavirus.png" alt="" style="width: 100%; height: 290px;">
       </div>
-      <div class="" style="border: 2px solid black; display: inline-block; width: 44%; padding-left: 40px;">
+      <div class="" style="display: inline-block; width: 44%; padding-left: 40px;">
           <h1 style="text-decoration: underline; margin-top: 0;">Coronavirus</h1>
           <p style="margin-bottom: 0;">Coronaviruses are a type of virus. There are many different kinds, and some cause disease. A coronavirus identified in 2019, SARS-CoV-2, has caused a pandemic of respiratory illness, called COVID-19.</p>
           <h1>How does the coronavirus spread?</h1>
           <p style="margin-bottom: 0px;">As of now, researchers know that the coronavirus is spread through droplets and virus particles released into the air when an infected person breathes, talks, laughs, sings, coughs or sneezes. Larger droplets may fall to the ground in a few seconds, but tiny infectious particles can linger in the air and accumulate in indoor places, especially where many people are gathered and there is poor ventilation. This is why mask-wearing, hand hygiene and physical distancing are essential to preventing COVID-19.</p>
       </div>
     </div>
-    <div class="" style="border: 2px solid black;">
-      <div class="" style="border: 2px solid black; width: 30%; display: inline-block;  padding-left: 45px;">
+    <div class="">
+      <div class="" style="width: 30%; display: inline-block;  padding-left: 45px;">
         <h2 style="margin-left: 10px; margin-bottom: 0;">Little Bit Info About Me</h2>
         <img src="mypic.jpg" alt="" style="float: left; width: 160px; margin: 10px 10px 0 10px;">
         <p style=" font-size: 20px; font-weight: 600; margin-top: 8px;">Welcome! My Name is Maqsood Ahmed Jatoi. Currently i am studying in Department of Computer Science at QUAID-E-AWAM University of Engineering Science and Technology Nawabshah.I am mostly involved is research and learning and teaching.
           I created this website for my friends, students and for those people who are interested in programming who are interested in Web Developing and Designing. Here i will upload materials related of Web Developing and Designing Stay Connect with us Thanks.</p>
       </div>
-      <div class="" style="border: 2px solid black; width: 30%; display: inline-block; position: absolute; top: 111%;">
+      <div class="" style="width: 30%; display: inline-block; position: absolute; top: 111%;">
         <h2 style="margin-left: 10px; margin-bottom: 0;">My Academic Info</h2>
         <h4>Qualifications</h4>
         <ul>
@@ -86,7 +86,7 @@
           </ul>
         </ul>
         </div>
-        <div class="" style="border: 2px solid black; width: 31%; display: inline-block; position: absolute; top: 111%; left: 65%;  padding-right: 40px;">
+        <div class="" style="width: 31%; display: inline-block; position: absolute; top: 111%; left: 65%;  padding-right: 40px;">
           <h2>Web Developing</h2>
           <p style=" font-size: 20px; font-weight: 600;">Web development is the work involved in developing a Web site for the Internet (World Wide Web) or an intranet (a private network).[1] Web development can range from developing a simple single static page of plain text to complex Web-based Internet applications (Web apps), electronic businesses, and social network services. A more comprehensive list of tasks to which Web development commonly refers, may include Web engineering, Web design, Web content development, client liaison, client-side/server-side scripting, Web server and network security configuration, and e-commerce development.</p>
         </div>
