--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
           <p style="margin-bottom: 0px;">As of now, researchers know that the coronavirus is spread through droplets and virus particles released into the air when an infected person breathes, talks, laughs, sings, coughs or sneezes. Larger droplets may fall to the ground in a few seconds, but tiny infectious particles can linger in the air and accumulate in indoor places, especially where many people are gathered and there is poor ventilation. This is why mask-wearing, hand hygiene and physical distancing are essential to preventing COVID-19.</p>
       </div>
     </div>
+                                        <hr>
     <div class="">
-      <div class="" style="width: 30%; display: inline-block;  padding-left: 45px;">
+      <div class="" style="width: 30%; display: inline-block;  padding-left: 45px; position: absolute; top: 111%;">
         <h2 style="margin-left: 10px; margin-bottom: 0;">Little Bit Info About Me</h2>
         <img src="mypic.jpg" alt="" style="float: left; width: 160px; margin: 10px 10px 0 10px;">
         <p style=" font-size: 20px; font-weight: 600; margin-top: 8px;">Welcome! My Name is Maqsood Ahmed Jatoi. Currently i am studying in Department of Computer Science at QUAID-E-AWAM University of Engineering Science and Technology Nawabshah.I am mostly involved is research and learning and teaching.
