--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <img src="mypic.jpg" alt="" style="width: 220px; border-radius: 50%;">
         </div>
       </div>
+                                                                                 <hr>
     <div class="">
       <div class="" style="display: inline-block; width: 34%; padding-left: 180px;">
         <img src="coronavirus.png" alt="" style="width: 100%; height: 290px;">
@@ -72,7 +73,7 @@
         <p style=" font-size: 20px; font-weight: 600; margin-top: 8px;">Welcome! My Name is Maqsood Ahmed Jatoi. Currently i am studying in Department of Computer Science at QUAID-E-AWAM University of Engineering Science and Technology Nawabshah.I am mostly involved is research and learning and teaching.
           I created this website for my friends, students and for those people who are interested in programming who are interested in Web Developing and Designing. Here i will upload materials related of Web Developing and Designing Stay Connect with us Thanks.</p>
       </div>
-      <div class="" style="width: 30%; display: inline-block; position: absolute; top: 111%;">
+      <div class="" style="width: 30%; display: inline-block; padding-top: 20px;">
         <h2 style="margin-left: 10px; margin-bottom: 0;">My Academic Info</h2>
         <h4>Qualifications</h4>
         <ul>
