--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
     </div>
                                         <hr>
     <div class="">
-      <div class="" style="width: 30%; display: inline-block;  padding-left: 45px; position: absolute; top: 111%;">
+      <div class="" style="width: 30%; display: inline-block;  padding-left: 45px; padding-top: 20px;">
         <h2 style="margin-left: 10px; margin-bottom: 0;">Little Bit Info About Me</h2>
         <img src="mypic.jpg" alt="" style="float: left; width: 160px; margin: 10px 10px 0 10px;">
         <p style=" font-size: 20px; font-weight: 600; margin-top: 8px;">Welcome! My Name is Maqsood Ahmed Jatoi. Currently i am studying in Department of Computer Science at QUAID-E-AWAM University of Engineering Science and Technology Nawabshah.I am mostly involved is research and learning and teaching.
           I created this website for my friends, students and for those people who are interested in programming who are interested in Web Developing and Designing. Here i will upload materials related of Web Developing and Designing Stay Connect with us Thanks.</p>
       </div>
-      <div class="" style="width: 30%; display: inline-block; padding-top: 20px;">
+      <div class="" style="width: 30%; display: inline-block; position: absolute; top: 111%;">
         <h2 style="margin-left: 10px; margin-bottom: 0;">My Academic Info</h2>
         <h4>Qualifications</h4>
         <ul>
@@ -88,7 +88,7 @@
           </ul>
         </ul>
         </div>
-        <div class="" style="width: 31%; display: inline-block; position: absolute; top: 111%; left: 65%;  padding-right: 40px;">
+        <div class="" style="width: 31%; display: inline-block; position: absolute; top: 111%; left: 65%; padding-right: 40px;">
           <h2>Web Developing</h2>
           <p style=" font-size: 20px; font-weight: 600;">Web development is the work involved in developing a Web site for the Internet (World Wide Web) or an intranet (a private network).[1] Web development can range from developing a simple single static page of plain text to complex Web-based Internet applications (Web apps), electronic businesses, and social network services. A more comprehensive list of tasks to which Web development commonly refers, may include Web engineering, Web design, Web content development, client liaison, client-side/server-side scripting, Web server and network security configuration, and e-commerce development.</p>
         </div>
